--- a/index.html
+++ b/index.html
@@ -86,6 +86,13 @@
 			</div>
 		</nav>
 		<!-- END NAVBAR -->
+	<div class="container">
+		<div class="row">
+			<div class="nav-line">
+				<hr>
+			</div>
+		</div>
+	</div>
 		<!-- HERO UNIT -->
 		<section class="hero-unit-animated">
 			<div id="carousel-hero-animated" class="carousel">
