--- a/siliconBattery.html
+++ b/siliconBattery.html
@@ -21,11 +21,11 @@
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400italic,400,600,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300,300italic,400italic,700,400,300' rel='stylesheet' type='text/css'>
 	<!-- FAVICONS -->
-	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/repute144x144.png">
-	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/repute114x114.png">
-	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/repute72x72.png">
-	<link rel="apple-touch-icon-precomposed" href="assets/ico/repute57x57.png">
-	<link rel="shortcut icon" href="assets/ico/favicon.png">
+	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/color144x144.png">
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/color114x114.png">
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/color72x72.png">
+	<link rel="apple-touch-icon-precomposed" href="assets/ico/color57x57.png">
+	<link rel="shortcut icon" href="assets/ico/observerfavicon.png">
 </head>
 
 <body>
@@ -124,7 +124,6 @@
 								<li><strong>Facts:</strong> Photography, Lightroom, Photoshop</li>
 								<li><strong>Other Facts:</strong> <a href="#">Photography</a>, <a href="#">Corporate</a> </li>
 							</ul>
-							<a href="#" class="btn btn-default"><i class="fa fa-external-link"></i> Visit Website</a>
 						</section>
 					</div>
 				</div>
