--- a/index.html
+++ b/index.html
@@ -35,17 +35,18 @@
 		<!-- NAVBAR -->
 		<nav class="navbar navbar-default " role="navigation">
 			<div class="container">
-				<div class="navbar-header">
+				<div class="navbar-header" style="margin-top: 20px;">
+					<a href="index.html" class="navbar-brand navbar-logo" style="margin-bottom: 45px;">
+						<img src="assets/img/logo/color.png" alt="Observer Mobility Logo">
+					</a>
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-nav">
 						<span class="sr-only">Toggle Navigation</span>
 						<i class="fa fa-bars"></i>
 					</button>
-					<a href="index.html" class="navbar-brand navbar-logo" style="margin-bottom: 45px;">
-						<img src="assets/img/logo/color.png" alt="Observer Mobility Logo">
-					</a>
+
 				</div>
 				<!-- MAIN NAVIGATION -->
-				<div id="main-nav" class="navbar-collapse collapse" style="padding: 25px;">
+				<div id="main-nav" class="navbar-collapse collapse" style="margin-top: 25px; padding: 25px;">
 					<ul class="nav navbar-nav navbar-right">
 						<li>
 							<a href="index.html">HOME</a>
@@ -86,6 +87,57 @@
 			</div>
 		</nav>
 		<!-- END NAVBAR -->
+<!-- BEGIN LINE BREAK -->
+	<div class="container">
+		<div class="row">
+			<div class="nav-line-1">
+				<hr>
+			</div>
+		</div>
+	</div>
+<!-- END LINE BREAK -->
+
+<div class="container">
+<div class="row">
+<div class="col-md-12">
+
+		<!-- HERO UNIT -->
+		<section class="hero-unit-slider slider-responsive">
+			<div id="carousel-hero" class="slick-carousel">
+				<div class="carousel-inner" role="listbox">
+					<div class="item active">
+						<img src="assets/img/sliders/slider3-h500.png" class="img-responsive" alt="Slider Image">
+						<div class="carousel-caption">
+							<h2 class="hero-heading">CLEAN &amp; ELEGANT DESIGN</h2>
+							<p class="lead">Giving valuable reputation and credibility to your business</p>
+							<a href="#" class="btn btn-lg hero-button">LEARN MORE</a>
+						</div>
+					</div>
+					<div class="item">
+						<img src="assets/img/sliders/slider2-h500.png" class="img-responsive" alt="Slider Image">
+						<div class="carousel-caption">
+							<h2 class="hero-heading">ULTRA RESPONSIVE</h2>
+							<p class="lead">Leave it to the theme, it knows how to deal with screen sizes</p>
+							<a href="#" class="btn btn-lg hero-button">LEARN MORE</a>
+						</div>
+					</div>
+					<div class="item">
+						<img src="assets/img/sliders/slider1-h500.png" class="img-responsive" alt="Slider Image">
+						<div class="carousel-caption">
+							<h2 class="hero-heading">EASY TO CUSTOMIZE</h2>
+							<p class="lead">Readable code, well documented and FREE support</p>
+							<a href="#" class="btn btn-lg hero-button">LEARN MORE</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- END HERO UNIT -->
+</div>
+</div>	
+</div>	
+
+<!-- BEGIN LINE BREAK -->
 	<div class="container">
 		<div class="row">
 			<div class="nav-line">
@@ -93,75 +145,8 @@
 			</div>
 		</div>
 	</div>
-		<!-- HERO UNIT -->
-		<section class="hero-unit-animated">
-			<div id="carousel-hero-animated" class="carousel">
-				<!-- Slide Wrapper -->
-				<div class="carousel-inner" role="listbox">
-					<div class="item active">
-						<div class="container">
-							<div class="hero-left pull-left">
-								<div class="hero-text">
-									<h2 class="hero-heading animation-delay-5" data-animation="animated fadeIn" style="color: #4aaf56;">GO WHEREVER YOU WISH</h2>
-									<p class="lead animation-delay-7" data-animation="animated fadeIn">Explore areas you never dreamed possible</p>
-								</div>
-								<a href="4x4ElectricWheelchairs.html" class="btn btn-info btn-lg hero-button animation-delay-12" data-animation="animated fadeIn">LEARN MORE</a>
-							</div>
-<!-- 							<div class="hero-right pull-right">
-								<img src="assets/img/hero-unit-chair1.png" class="animation-delay-9" data-animation="animated fadeInRight" alt="Repute Business Theme">
-							</div> -->
-						</div>
-					</div>
-					<div class="item">
-						<div class="container">
-							<div class="hero-left pull-left">
-								<div class="hero-text">
-									<h2 class="hero-heading animation-delay-5" data-animation="animated fadeIn" style="color: #4aaf56;">THE PERFECT ALL TERRAIN VEHICLE</h2>
-									<p class="lead animation-delay-7" data-animation="animated fadeIn">Let the Observer  show you what it can do</p>
-								</div>
-								<a href="4x4ElectricWheelchairs.html" class="btn btn-info btn-lg hero-button animation-delay-12" data-animation="animated fadeIn">LEARN MORE</a>
-							</div>
-<!-- 							<div class="hero-right pull-right">
-								<img src="assets/img/hero-unit-chair2.png" class="animation-delay-9" data-animation="animated fadeInRight" alt="Repute Business Theme">
-							</div> -->
-						</div>
-					</div>
-					<div class="item">
-						<div class="container">
-							<div class="hero-left pull-left">
-								<div class="hero-text">
-									<h2 class="hero-heading animation-delay-5" data-animation="animated fadeIn" style="color: #4aaf56;">THE OBSERVER MAKES YOU MORE INDEPENDENT</h2>
-									<p class="lead animation-delay-7" data-animation="animated fadeIn">Anywhere you want, anytime you want, without limitations</p>
-								</div>
-								<a href="4x4ElectricWheelchairs.html" class="btn btn-info btn-lg hero-button animation-delay-12" data-animation="animated fadeIn">LEARN MORE</a>
-							</div>
-<!-- 							<div class="hero-right pull-right">
-								<img src="assets/img/hero-unit-chair3.jpg" class="animation-delay-9" data-animation="animated fadeInRight" alt="Repute Business Theme">
-							</div> -->
-						</div>
-					</div>
-				</div>
-				<!-- End Slide Wrapper -->
-				<!-- Controls -->
-				<a class="left carousel-control" href="#carousel-hero-animated" role="button" data-slide="prev">
-					<span class="fa fa-angle-left" aria-hidden="true"></span>
-					<span class="sr-only">Previous</span>
-				</a>
-				<a class="right carousel-control" href="#carousel-hero-animated" role="button" data-slide="next">
-					<span class="fa fa-angle-right" aria-hidden="true"></span>
-					<span class="sr-only">Next</span>
-				</a>
-				<!-- End Controls -->
-				<!-- Pagination -->
-				<ol class="carousel-indicators">
-					<li data-target="#carousel-hero-animated" data-slide-to="0" class="active"></li>
-					<li data-target="#carousel-hero-animated" data-slide-to="1"></li>
-					<li data-target="#carousel-hero-animated" data-slide-to="2"></li>
-				</ol>
-				<!-- End Pagination -->
-			</div>
-		</section>
-		<!-- END HERO UNIT -->
+<!-- END LINE BREAK -->
+
 		<!-- BOXED CONTENT -->
 		<section>
 			<div class="container">
@@ -194,6 +179,17 @@
 			</div>
 		</section>
 		<!-- END BOXED CONTENT -->
+
+<!-- BEGIN LINE BREAK -->
+	<div class="container">
+		<div class="row">
+			<div class="nav-line">
+				<hr>
+			</div>
+		</div>
+	</div>
+<!-- END LINE BREAK -->
+
 		<!-- CAROUSEL -->
 		<section class="recent-works slick-carousel">
 			<div class="container">
@@ -236,34 +232,6 @@
 			</div>
 		</section>
 		<!-- END CAROUSEL -->
-		<!-- BRIEF ABOUT -->
-		<section>
-			<div class="container">
-				<div class="row">
-					<div class="col-md-6">
-						<h2 class="section-heading">WHO WE ARE</h2>
-						<img src="assets/img/observer-gus.jpg" class="inline-img" alt="Who We Are">
-						<p>Compellingly actualize excellent users and distinctive leadership skills. Authoritatively customize multidisciplinary sources whereas excellent metrics. Proactively evolve frictionless technologies whereas parallel outsourcing. Interactively productivate cross functional methodologies with visionary e-business. Appropriately generate diverse "outside the box" thinking whereas cutting-edge deliverables. Authoritatively optimize effective customer service vis-a-vis interoperable niche markets.</p>
-						<p>Rapidiously facilitate distributed action items vis-a-vis an expanded array of applications. Monotonectally procrastinate quality content without interdependent "outside the box" thinking. Holisticly syndicate enterprise infrastructures without magnetic methods of empowerment. Professionally evisculate high-quality collaboration and idea-sharing rather than bricks-and-clicks quality vectors. Globally administrate strategic customer service before inexpensive value. Rapidiously enhance cross-platform e-tailers via clicks-and-mortar models. Intrinsicly envisioneer.</p>
-						<br>
-					</div>
-					<div class="col-md-6">
-						<h2 class="section-heading">WHY CHOOSE US?</h2>
-						<p>Professionally disintermediate dynamic models through enterprise core competencies. Completely target clicks-and-mortar ideas vis-a-vis goal-oriented quality vectors. Monotonectally incentivize plug-and-play services whereas B2C leadership skills. Professionally predominate standardized markets and premier.</p>
-						<ul class="fa-ul list-iconed">
-							<li><i class="fa fa-li fa-check-circle"></i>Objectively unleash impactful functionalities via transparent networks.</li>
-							<li><i class="fa fa-li fa-check-circle"></i>Appropriately promote value-added strategic theme areas for pandemic meta-services.</li>
-							<li><i class="fa fa-li fa-check-circle"></i>Intrinsicly redefine premier e-services via innovative core competencies.</li>
-							<li><i class="fa fa-li fa-check-circle"></i>Interactively facilitate 24/365 models with intermandated.</li>
-							<li><i class="fa fa-li fa-check-circle"></i>Interactively reintermediate synergistic "outside the box" thinking before inexpensive experiences.</li>
-							<li><i class="fa fa-li fa-check-circle"></i>Conveniently morph global benefits rather than process-centric customer service.</li>
-						</ul>
-						<p>Synergistically reintermediate innovative action items without technically sound technologies. Dramatically reconceptualize empowered applications with timely vortals. Phosfluorescently integrate fully researched platforms with market-driven action items. Dynamically restore 2.0 benefits via fully researched deliverables. Proactively extend client-focused core competencies before distinctive "outside the.</p>
-					</div>
-				</div>
-			</div>
-		</section>
-		<!-- END BRIEF ABOUT -->
 
 		<!-- CALL-TO-ACTION -->
 		<section class="call-to-action">
