--- a/powerchairs2.html
+++ b/powerchairs2.html
@@ -14,7 +14,7 @@
 	<link href="assets/css/my-custom-styles.css" rel="stylesheet" type="text/css">
     <link href="assets/css/skins/slategray.css" rel="stylesheet" type="text/css"> <!-- your skin -->
 	
-	<link href="assets/css/portfolio-item.css" rel="stylesheet">
+	<link href="assets/css/portfolioItem.css" rel="stylesheet">
 	<link href="assets/css/addons.css" rel="stylesheet">
 
 	<link rel="stylesheet" href="assets/css/tablesaw.css">
@@ -127,52 +127,34 @@
 <div class="carousel">
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
-<!--   <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
-
-  </ol> -->
 
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
       <img class="img-responsive" src="assets/img/powerchairs/maximus1.jpg" alt="Observer Maximus">
       <div class="carousel-caption">
-<!--         <h3>Cycling</h3>
-        <p>I love my road bike.</p> -->
+
       </div>
     </div>
 
     <div class="item">
       <img class="img-responsive" src="assets/img/powerchairs/maximus2.jpg" alt="Observer Maximus">
       <div class="carousel-caption">
-<!--         <h3>Camping</h3>
-        <p>Can't stay away from the mountains.</p> -->
+
       </div>
     </div>
 
     <div class="item">
       <img class="img-responsive" src="assets/img/powerchairs/maximus3.jpg" alt="Observer Maximus">
       <div class="carousel-caption">
-<!--         <h3>The Super Computer</h3>
-        <p>My development machine.</p> -->
-      </div>
-    </div>
 
-    <div class="item">
-      <img class="img-responsive" src="assets/img/powerchairs/maximus4.png" alt="Observer Maximus">
-      <div class="carousel-caption">
-<!--         <h3>Ballin'</h3>
-        <p>Has the NBA Playoffs started yet?</p> -->
       </div>
     </div>
 
 <!--     <div class="item">
-      <img class="img-responsive" src="http://placehold.it/750x500" alt="">
+      <img class="img-responsive" src="assets/img/powerchairs/maximus4.png" alt="Observer Maximus">
       <div class="carousel-caption">
-        <h3>Photography</h3>
-        <p>The countryside breathes peace into my soul.</p>
+
       </div>
     </div> -->
   
@@ -303,13 +285,7 @@
 
                 <h3 style="margin-top: 15px; background-color: #4aaf56; color: white; text-align: center;">Maximus Description</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
-<!--                 <h3>Observer Maximus Dimensions/Stats</h3>
-                <ul>
-                    <li>Lorem Ipsum</li>
-                    <li>Dolor Sit Amet</li>
-                    <li>Consectetur</li>
-                    <li>Adipiscing Elit</li>
-                </ul> -->
+
             </div>
 
         </div>
@@ -321,7 +297,7 @@
         <div class="row">
 
             <div class="col-lg-12">
-                <h3 class="page-header">Add-on &amp; Options</h3>
+                <h3 class="page-header">Add-ons &amp; Options</h3>
             </div>
 
 <div class="stockOptions">
@@ -354,24 +330,6 @@
                 </a>
             </div>
 
-
-
-<!--             <div class="col-sm-3 col-xs-6">
-<h5>Lithium or Lead Acid Batteries</h5>   
-<div class="foo blue"></div>
-<div class="foo purple"></div>
-<div class="foo wine"></div>
-            </div>
-
-            <div class="col-sm-3 col-xs-6">
-<h5>Ohio State Buckeyes Colors</h5>               	
-<div class="foo blue"></div>
-<div class="foo purple"></div>
-<div class="foo wine"></div>
-            </div> -->
-
-        
-
         <!-- /.row -->
 
 
@@ -392,40 +350,7 @@
 <div class="foo black"></div>
             </div>
 
-
-<!--             <div class="col-lg-12">
-                <h3 class="page-header">Featured Products</h3>
-            </div> -->
-<!-- 
-            <div class="col-sm-3 col-xs-6">
-                <a href="#">
-                	<h5>Heavy Duty Off-Road Tires</h5> 
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x350" alt="">
-
-                </a>
-            </div>
-
-            <div class="col-sm-3 col-xs-6">
-                <a href="#">
-                	<h5>Additional Seat</h5> 
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x350" alt="">
-                </a>
-            </div>
-
-            <div class="col-sm-3 col-xs-6">
-                <a href="#">
-                	<h5>Additional Device Control</h5> 
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x350" alt="">
-                </a>
-            </div>
-
-            <div class="col-sm-3 col-xs-6">
-                <a href="#">
-                	<h5>Carrier &amp; Seat</h5> 
-                    <img class="img-responsive portfolio-item" src="http://placehold.it/500x350" alt="">
-                </a>
-            </div>
- --></div>
+</div>
         </div>
         <!-- /.row -->
 </div>
@@ -440,13 +365,13 @@
 
 
 <!-- BEGIN LINE BREAK -->
-	<div class="container">
+<!-- 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
 				<hr>
 			</div>
 		</div>
-	</div>
+	</div> -->
 <!-- END LINE BREAK -->
 
 
@@ -454,7 +379,10 @@
 
 		<section>
 			<div class="container">
-<h2 class="section-heading">OBSERVER MOBILITY MEDIA</h2>
+<div class="col-lg-12">
+                <h3 class="page-header">Observer Mobility Media</h3>
+            </div>
+
 				<div class="row">
 					<div class="col-md-6">
 						<div class="boxed-content">
@@ -501,7 +429,7 @@
 					<div class="col-md-4">
 						<!-- COLUMN 1 -->
 						<h3 class="sr-only">ABOUT US</h3>
-						<img src="assets/img/logo/black.png" class="logo" alt="Repute">
+						<img src="assets/img/logo/black.png" class="logo" alt="Observer Mobility">
 
 						</address>
 						<!-- END COLUMN 1 -->
